# rust-p2p-chat

./: .gitignore  Cargo.toml  crates.js  license  readme.md  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  tarpaulin.yml  test.yml
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/libp2p_swarm/behaviour/: trait.NetworkBehaviour.js  trait.NetworkBehaviourEventProcess.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
rust_chat_app/: all.html  fn.main.html  fn.send_message.html  fn.send_response.html  index.html  sidebar-items.js  struct.Chat.html
rust_chat_app/history/: constant.HISTORY_SIZE.html  index.html  sidebar-items.js  struct.History.html
rust_chat_app/state/: enum.MessageType.html  index.html  sidebar-items.js  struct.Message.html  struct.State.html
src/: history.rs  main.rs  state.rs
src/rust_chat_app/: history.rs.html  main.rs.html  state.rs.html
