[package]
name = "rust-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = "0.41.0"

log = "0.4.14"
pretty_env_logger = "0.4"

futures = "0.3.18"