[package]
name = "rust-chat-app"
version = "0.1.0"
edition = "2021"
#TODO Add keys
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#TODO Filter deps down using feature flags
tokio = { version = "1", features = ["full"] }
libp2p = "0.41.0"
serde = { version = "1.0.131", features = ["derive"] }
bincode = "1.3.3"

log = "0.4.14"
pretty_env_logger = "0.4"

futures = "0.3.18"